# advent_of_code

./: .gitignore  README.md
2015/dia01/: main.py
2015/dia01/cpp/: build  main.cpp
2015/dia01/python/: main.py
2015/dia02/: main.py
2015/dia02/cpp/: build  main.cpp
2015/dia02/python/: main.py
2015/dia03/: main.py
2015/dia03/cpp/: build  main.cpp
2015/dia03/python/: main.py
2015/dia04/: main.py
2015/dia04/cpp/: build  main.cpp  run.sh
2015/dia04/python/: main.py
2015/dia05/: main.py
2015/dia05/cpp/: build  main.cpp
2015/dia05/python/: main.py
2015/dia06/: main.py
2015/dia06/cpp/: CMakeLists.txt  build  main.cpp
2015/dia06/python/: main.py
2015/dia07/: main.py
2015/dia07/cpp/: build  main.cpp
2015/dia07/python/: main.py
2015/dia08/: main.py
2015/dia08/cpp/: build  main.cpp
2015/dia08/python/: main.py
2015/dia09/: main.py
2015/dia09/cpp/: build  main.cpp
2015/dia09/python/: main.py
2015/dia10/: main.py
2015/dia10/cpp/: build  main.cpp
2015/dia10/python/: main.py
2015/dia11/: main.py
2015/dia11/cpp/: build  main.cpp
2015/dia11/python/: main.py
2015/dia12/: main.py
2015/dia12/cpp/: build  main.cpp
2015/dia12/python/: main.py
2015/dia13/: main.py
2015/dia14/: main.py
2017/dia18/cpp/: CMakeLists.txt  build  main.cpp
2018/dia15/cpp/: CMakeLists.txt  build  main.cpp  run.sh
2022/dia01/: dia01.py  main.py  run.sh
2022/dia02/: dia02.py  main.py
2022/dia03/: dia03.py  main.py
2022/dia04/: dia04.py  main.py
2022/dia05/: dia05.py  main.py
2022/dia06/: dia06.py  main.py
2022/dia07/: dia07.py  main.py
2022/dia08/: dia08.py  main.py
2022/dia09/: dia09.py  main.py
2022/dia10/: dia10.py  main.py
2022/dia11/: dia11.py  main.py
2022/dia12/: dia12.py  main.py
2022/dia13/: dia13.py  main.py
2022/dia14/: dia14.py  main.py
2022/dia15/: dia15.py  main.py
2022/dia18/: dia18.py  main.py
2022/dia23/: dia23.py  main.py
2024/dia01/: main.py
2024/dia02/: main.py
2024/dia03/: main.py
2024/dia04/: main.py
2024/dia05/: main.py
2024/dia06/: main.py
2024/dia07/: main.py
2024/dia08/: main.py
2024/dia09/: main.py
2024/dia10/: main.py
2024/dia11/: main.py
2024/dia12/: main.py
2024/dia13/: main.py
2024/dia14/: main.py
2024/dia15/: main.py
2024/dia16/: main.py
2025/dia09/cpp/: CMakeLists.txt  build  main.cpp  run.sh
(+180 files in other folders)
